# bailii-mcp

./: .dockerignore  .gitignore  .mcp.json  .mcpbignore  AGENTS.md  CLAUDE.md  LAUNCHGUIDE.md  LICENSE  README.md  bailii-mcp.mcpb  bailii_mcp.py  fastmcp.json  manifest.json  pyproject.toml  requirements.txt  server.json  server.py
